@@ -36,6 +36,14 @@ namespace Fungus
         [Tooltip("Use the UI Event System to check for drag events. Clicks that hit an overlapping UI object will be ignored. Camera must have a PhysicsRaycaster component, or a Physics2DRaycaster for 2D colliders.")]
         [SerializeField] protected bool useEventSystem;
 
+        [SerializeField] protected bool beingDragged;
+
+        public virtual bool BeingDragged
+        {
+            get { return beingDragged; }
+            set { beingDragged = value; }
+        }
+
         protected Vector3 startingPosition;
         protected bool updatePosition = false;
         protected Vector3 newPosition;
@@ -95,6 +103,8 @@ namespace Fungus
 
         protected virtual void DoBeginDrag()
         {
+            beingDragged = true;
+
             // Offset the object so that the drag is anchored to the exact point where the user clicked it
             float x = Input.mousePosition.x;
             float y = Input.mousePosition.y;
@@ -161,6 +171,8 @@ namespace Fungus
             {
                 LeanTween.move(gameObject, startingPosition, returnDuration).setEase(LeanTweenType.easeOutExpo);
             }
+
+            beingDragged = false;
         }
 
         protected virtual void DoPointerEnter()
