@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 21248040e66eae44e925a1352ef3add9
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
